[package]
name = "state-space"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = "1.0.145"
ethers = { version = "2.0.4", features = ["abigen", "ws", "ipc", "rustls"] }
tokio = { version = "1.21.1", features = ["full"] }
thiserror = "1.0.36"

# dark forestry
damms = { git = "ssh://git@github.com/darkforestry/damms-rs.git", tag = "0.4.10" }
arraydeque = "0.5.1"
regex = "1.7.2"